<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SmartKL</string>
    <string name="title_home">Home</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_me">Me</string>

    <string name="bank">Bank</string>
    <string name="transport">Transport</string>
    <string name="events">Events</string>
    <string name="health_care">Health Care</string>
    <string name="education">Education</string>
    <string name="organization">Organization</string>

    <string name="title_activity_transport">TransportActivity</string>

    <string name="problem">Problems</string>
    <string name="suggestion">Suggestion</string>
    <string name="description">Description</string>
    <string name="subject">Subject</string>
    <string name="submit">Submit</string>
    <string name="feedbackForm">Feedback Form</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_transport_info">TransportInfo</string>
    <string name="title_activity_health_care">HealthCareActivity</string>
    <string name="title_activity_organization">OrganizationActivity</string>

    <string name="welcome_phase">Hi , </string>
    <string name="show_phone_no">Phone No :</string>
    <string name="display_email">Email :</string>
    <string name="button_change_profile_pic">Change Profile Picture</string>
    <string name="button_logout">LogOut</string>
    <string name="button_update_profile">Update Profile</string>
    <string name="FeedbackID">Feedback ID</string>
    <string name="Type">Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="norecord">No record</string>
    <string name="title_activity_citizen_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="register_forget_password">Register | Forget Password</string>
    <string name="already_register">Already Register? Click here to Login</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="button_register">Register</string>
    <string name="reply">Reply</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="transportLine" />
    <string name="title_activity_transport_line">TransportLineActivity</string>
    <string name="hcBranchName">No record</string>
    <string name="hcBranchLocation">No record</string>
    <string name="hcContactNumber">No record</string>
    <string name="orgName">No record</string>
    <string name="orgAddress">No record</string>
    <string name="orgContact">No record</string>
    <string name="hcName">Hospital Name</string>
    <string name="hcAddress">Address</string>
    <string name="hcContact">Contact Number</string>
    <string name="line">Transport Line</string>
    <string name="scheduleURL">Schedule URL</string>
</resources>
