<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CitizenLoginActivity">


    <LinearLayout
        android:id="@+id/registerForm"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="154dp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login" />
    </LinearLayout>
    <TextView
        android:layout_below="@id/registerForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_register" />

</RelativeLayout>